[EFL] Alpha value of ewk_view_bg_color_set is not working https://bugs.webkit.org/show_bug.cgi?id=135333

Reviewed by Gyuyoung Kim.

evas_object_image_alpha_set should be called for the transparent evas object.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::handleEvasObjectColorSet):
(EwkView::setBackgroundColor): Checked the alpha value of object and called evas_object_image_alpha_set.
* UIProcess/API/efl/EwkView.h:
* UIProcess/API/efl/ewk_view.cpp:
(ewk_view_bg_color_set): Moved the logic to EwkView.

Canonical link: https://commits.webkit.org/153267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171724 268f45cc-cd09-0410-ab3c-d52691b4dbfc